# zen-prompt

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: README.md  deployment.md
docs/data/: manifest.json
docs/data/cache/: quotes.db
docs/data/csv/: quotes-small.csv  quotes.csv
docs/data/json/: quotes-small.json
docs/data/sqlite/: quotes-small.db
docs/data/sqlite/cache/: quotes.db
docs/data/text/: quotes-small.txt  quotes.txt
scripts/: check  collect  install-local  release  zen-prompt
tests/: test_cli.py  test_db.py  test_history.py  test_history_cli.py  test_manifest.py  test_photo_rotation.py  test_photos.py  test_pipeline.py  test_profile.py  test_provisioning.py  test_spider.py
vibe_prompt/: cli.py  db.py  pipelines.py  spider.py
vibe_prompt/commands/: __init__.py  export.py  get.py  search.py  sync.py
vibe_prompt/photos/: README.md
zen_prompt/: __init__.py  cli.py  db.py  models.py
zen_prompt/commands/: crawl.py  distill.py  export.py  get.py  history.py  profile.py  random.py  search.py  stat.py  sync.py  utils.py
zen_prompt/commands/arts/: __init__.py
