[project]
name = "zen-prompt"
version = "v0.2.0-alpha"
description = "Aesthetic inspiration for your shell"
readme = "README.md"
authors = [{ name = "Andy Le", email = "anhldbk@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "rich>=14.3.3",
    "scrapy>=2.14.2",
    "textual-image>=0.8.5",
    "tqdm>=4.67.3",
    "typer>=0.24.1",
]

[project.scripts]
zen-prompt = "zen_prompt.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["zen_prompt"]

[tool.hatch.build.targets.wheel.force-include]
"docs/data/sqlite/quotes-small.db" = "zen_prompt/data/quotes.db"

[tool.hatch.build.targets.sdist]
include = [
    "/zen_prompt/**/*.py",
    "/zen_prompt/photos/**/*.png",
    "/zen_prompt/photos/**/*.md",
    "/docs/data/sqlite/quotes-small.db",
]

[tool.hatch.build]
exclude = [
    "/docs/data/csv",
    "/docs/data/json",
    "/docs/data/sqlite/quotes.db",
    "/docs/data/sqlite/quotes-raw.db",
    "/docs/data/sqlite/quotes-distilled.db",
    "/docs/prompts",
    "/docs/superpowers",
    "/scripts",
    "/tests",
    "/.github",
]

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.15.8"]
